tests/NormalTests/paczka1/small_fuzzy/46198655.err
Error in line 1: RntOm S697 64,7
Error in line 5: S968 S697 14,6
Error in line 8: qFub A406 74,0
